# gasoline

./: .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  crawler.py  docker-compose.yml  feeds.txt  pyproject.toml  requirements.txt  start.sh  torrc
app/: app.py
app/static/css/: styles.css
app/templates/: about.html  base.html  data.html  navbar.html
chore/: socks.sh
crawler/crawler/: items.py  middlewares.py  pipelines.py  settings.py
crawler/crawler/spiders/: gasoline_spider.py
src/gasoline/: engine.py
tests/: test_engine.py
