[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gasoline"
version = "0.0.1"
authors = [
  { name="Ryota Hiyoshi", email="hiyoshir@gmail.com" },
]
description = "Yet another search engine"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "aiohttp==3.9.1",
  "beautifulsoup4==4.12.2",
  "fastapi==0.108.0",
  "feedparser==6.0.11",
  "Jinja2==3.1.3",
  "pandas==2.1.4",
  "pyarrow==15.0.0",
  "uvicorn==0.25.0",
]

[project.urls]
Homepage = "https://github.com/tenax66/gasoline"
